app/public/css/home.css
*, *::before, *::after {
      box-sizing: border-box;
  }

  html, body{

    margin: 0px;
    padding: 0px;
    overflow-x: hidden; 
  }

  a{
        text-decoration: none;
  }
  
  body {
      font-family: 'Helvetica', sans-serif;
      font-size: 1rem;
      background-image: url(/static/assets/img/bg-orig.jpg);
      background-repeat: no-repeat;
      background-size: cover;
      overflow: hidden;
  }
  
.row{
      display: flex;
      justify-content: space-between;
  }

.db-data{
      background: rgba(255,255,255,0.87);
      border-radius: 12.32px;
}


.container{
      display: flex;
      justify-content: center;
      align-items: center;
      height: 100vh;
      padding: .5rem;
}

p, h3{
      margin: 0;
}

h1{
      font-size: 1rem;
}

            .edit-icon{
                  border: none;
                  background: none;
                  margin-top: 1.25rem;
                  padding: 0;
            }

            .edit-icon .far{
                  color: #b18ac1;
                  
            }



.dashboard{
      
      padding: 0 0 1rem;
      width: 95%;
      max-width: 300px;
      height: 550px;
      margin-bottom: 10px;
      background: linear-gradient(177deg, #FFFFFF 7%, rgba(217,210,226,0.14) 56%, #FFFFFF 95%); 
    border-radius: 25px;
      backdrop-filter: blur(3px);
      -webkit-backdrop-filter: blur(3px);
}

.db-content{
      padding: 1.5rem 1rem .75rem;
}

.nav {
      overflow: hidden;
      justify-content: space-evenly;
      bottom: 1rem;
      padding: .5rem .75rem;
      width: 100%;
      margin: 0 auto;
      border: none;
      border-radius: 26.76px;
      border-radius: 0 0 15px 15px;
      }
            .tab-links{
             border: none;
             padding: .75rem .75rem;
            border-radius: 10px;
            }

             .tab-links .fas{
                  color: #C9C7C7;
                  padding-bottom: .25rem;
            }

             .active{
                        color:#C0A4CB;
                        border-bottom: 2px solid #C0A4CB ;
                  }

             .active-click{
                        color:white;
                  }

               
                  .tab-links:hover{
                        background-color:
                        rgb(232, 227, 233); 

                        }


      .db-title-home{
            font-size: 16.08px;
            color: #1E1B1B;
            letter-spacing: 0.71px;
            font-weight: 500;
            margin: 1rem 0 .5rem .5rem;
      }

      .data-primary{
            padding: 1px;
            margin-top: 2rem;
      }

      .date, .clock{
            text-align: center;
      }

      .date{
            width: 35%;
            padding: .75rem;
      }

            #day-of-week{
                  font-size:1.2rem;
                  font-weight: 700;
                  color: #A88CB3;
                  letter-spacing: 1px;
                  line-height: 1;
            }

            #day-num{
                  font-size: 43.8px;
                  font-weight: 400;
                  letter-spacing: 0.7px;
                  line-height: 1;
            }

      .clock{
            width: 60%;
            padding: 1rem 0;
            align-self: center;
      }

            .clock-time{
                  font-size: 45px;
                  font-weight: 500;
                  letter-spacing: -1.5px;
            }

            .clock-phase{
                  font-size: 10px;
                  display: inline-block;
                  letter-spacing: 1;
            }

      .tertiary{
            padding: .75rem 1rem .25rem .5rem;
            align-items: center;   
            margin-top: .7rem;
      }


      .tertiary + .tertiary{
            margin-bottom: 1.75rem;
      }

                  .data-title{
                        font-size: 14px;
                        color: #191818;
                        letter-spacing: 0.83px;
                  }

                  .data-result-primiary{
                        font-size: 12px;
                        color: #636060;
                        letter-spacing: 0.71px;
                        margin-top: .4rem;
                  }

                  .data-result-secondary{
                        font-size: 11px;
                        font-weight: 500;
                        color: #b487c5;
                        letter-spacing: 0.71px;
                        margin-top: 1.25rem;
                  }

                  .icon{
                        background: #83c48e;
                        opacity: .5;
                        padding: 1rem;
                        margin-bottom: 1rem;
                        border-radius: 10px;
                  }

                        .edit-capacity{
                              border: none;
                              font-size: 11px;
                              color: #C0A4CB;
                              background: none;
                              letter-spacing: 0.71px;
                              margin:0;
                              padding:0;
                        }

                             

                  .data-icon{
                        align-self: center;
                        text-align: center;
                        height: 60px;
                        width: 60px;
                        border-radius: 100px;
                  }


/* ------------modal--------------- */

.modal-container{
      width: 100%;
      display: none;
      position: fixed;
      top: 30%;

}
.modal{
      width: 75%; 
      min-width: 272px;
      max-width: 272px;
      background: rgba(255,255,255);
      border-radius: 5px;
      margin: 0 auto;
      padding: 1.25rem .25rem 1.5rem;
   
}

.modal-content{
      margin: 0 auto;
      width: 90%;
      color: #000;
}

.modal-title-container{
      width: 100%
}
/* ... */

